# SimpleSAT

./: .gitignore  CMakeLists.txt  README.md  build.sh  ci_test_example.sh  conanfile.txt
src/: bdd.cpp  dp.cpp  dpll.cpp  dpll_classic.cpp  general.cpp  main.cpp  symbolic_sat.cpp  visual.cpp
src/include/: clause.hpp  formula.hpp  literal.hpp  log.hpp  result.hpp  solver.hpp
src/include/sapy/: panywrapper.h  pbytes.h  pcollection_interface.h  pdict.h  piterator.h  plist.h  pobject.h  pset.h  pstring.h  putility.h
src/sapy/: CMakeLists.txt  panywarpper.cpp  pbytes.cpp  pdict.cpp  plist.cpp  pobject.cpp  pset.cpp  pstring.cpp  putility.cpp
test/: test.py
